5.6: приглашения в заявку и прямой запрос специалисту, уведомление job.invited с откликом шаблоном, счётчик просмотров
